--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 
         <div id="section-slider" class="single-item">
             <div class="slide">
-                <img src="img/section-slider/picture.svg" alt="">
+                <img src="img/section-slider/image-main.jpeg" alt="">
                 <h1 class="s-title"><b>Find your <br> own style</b></h1>
                 <button class="s-btn1">View more</button>
             </div>
             <div class="slide">
-                <img src="img/section-slider/picture (1).svg" alt="">
+                <img src="img/section-slider/image-2.jpeg" alt="">
                 <h1 class="s-title"><b>expand your <br> horizons</b></h1>
                 <button class="s-btn">View more</button>
             </div>
             <div class="slide">
-                <img src="img/section-slider/picture (2).svg" alt="">
+                <img src="img/section-slider/image.jpeg" alt="">
                 <h1 class="s-title"><b>discover new <br> options</b></h1>
                 <button class="s-btn">View more</button>
             </div>
